@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-25T08:00:43Z",
-  "count_outdated" : 72,
-  "uniques_outdated" : 55,
+  "timestamp" : "2024-01-28T16:00:55Z",
+  "count_outdated" : 73,
+  "uniques_outdated" : 56,
   "count" : 74,
   "uniques" : 57,
   "clones" : [
-    {
-      "timestamp": "2024-01-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 1,
